tweaked Stuart's debian files, can build .deb OK
git-svn-id: https://svn.code.sf.net/p/freetel/code/freedv-dev@3326 01035d8c-6547-0410-b346-abe4f91aad63

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,5 @@
-freedv (1.0-150830) unstable; urgency=low
+freedv (3255) unstable; urgency=low
 
-  * Subversion snapshot of tag 1.0.
+  * Subversion snapshot revision 3255.
 
- -- Stuart Longland <stuartl@longlandclan.yi.org>  Sun, 30 Aug 2015 09:01:13 +1000
+ -- David Rowe <david@rowetel.com>  Sat, 22 July 2017
