fixed some formatting in debian files
git-svn-id: https://svn.code.sf.net/p/freetel/code/freedv-dev@3327 01035d8c-6547-0410-b346-abe4f91aad63

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,5 @@
-freedv (3255) unstable; urgency=low
+freedv (3255) xenial; urgency=low
 
   * Subversion snapshot revision 3255.
 
- -- David Rowe <david@rowetel.com>  Sat, 22 July 2017
+ -- David Rowe <david@rowetel.com>  Sat, 22 Jul 2017 09:01:13 +1000
